--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+/* Track */
+::-webkit-scrollbar {
+  width: 7px; /* Adjust width as needed */
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+}
+
 .animation-text {
   font-size: 20px;
   font-weight: 400;
