--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,11 @@
   max-height: 500px;
   overflow-y: scroll;
 }
+
+@media screen and (max-width: 1024px) {
+  .skills-terminal-block #terminalEditor {
+    height: 100% !important;
+    min-height: 100% !important;
+    overflow-y: auto;
+  }
+}
